--- a/loop.ipynb
+++ b/loop.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
    "source": [
     "name=\"vinayak sharma\"\n",
     "for name in range(5):\n",
-    "    print('vinayak sharma')\n"
+    "    print(\"vinayak sharma\")\n"
    ]
   },
   {
@@ -281,32 +281,296 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2088848581.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[37], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    def__init__('self,name,age,salary,gender'):\u001b[0m\n\u001b[1;37m                                              ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "class employee:\n",
-    "    def__init__(self,name,age,salary,gender):\n",
+    "    def __init__(Self,name,age,salary,gender):\n",
+    "        self.name= name\n",
+    "        self.age= age\n",
+    "        self.salary= salary\n",
+    "        self.gender= gender\n",
     "\n",
-    "    self.name= name\n",
-    "    self.age= age\n",
-    "    self.salary= salary\n",
-    "    self.gender= gender\n",
-    "\n",
-    "def emplyoee_detail(self):\n",
+    "def emplyoee_detail(self):##\n",
     "    print('name of employee is', self.name)\n",
     "    print('age of employee is ', self.age)\n",
     "    print('salary of emplyoee is', self.salary)\n",
     "    print('gender of employee is', self.gender)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Write a program to print numbers from 1 to 10 using a for loop.##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (1,11):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "##Write a program to print the multiplication table of a given number using a while loop.##"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "48*1=48\n",
+      "48*2=96\n",
+      "48*3=144\n",
+      "48*4=192\n",
+      "48*5=240\n",
+      "48*6=288\n",
+      "48*7=336\n",
+      "48*8=384\n",
+      "48*9=432\n",
+      "48*10=480\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range (1,11):\n",
+    "    print(f\"48*{i}={48*i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n",
+      "sum of even number is from 1 to 20 is 110\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,21):\n",
+    "    if i%2==0:\n",
+    "        print(i)\n",
+    "        sum=sum+1\n",
+    "print(\"sum of even number is from 1 to 20 is\", sum)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum=0\n",
+    "for i in range(1,101):\n",
+    "    sum=sum+i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sum of intergers from 1 to 100 5050\n"
+     ]
+    }
+   ],
+   "source": [
+    "sum=0\n",
+    "num=1\n",
+    "\n",
+    "while num<=100:\n",
+    "        sum=sum+num\n",
+    "        num=num+1\n",
+    "print(\"sum of intergers from 1 to 100\",sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BREAK AND CONTINUE\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "appple\n",
+      "banana\n",
+      "kiwi\n"
+     ]
+    }
+   ],
+   "source": [
+    "#BREAK\n",
+    "fruits=[\"appple\", \"banana\", \"kiwi\", \"eggplant\", \"onion\", \"orange\"]\n",
+    "for fruit in fruits:\n",
+    "    if fruit==\"eggplant\":\n",
+    "        break\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "appple\n",
+      "banana\n",
+      "kiwi\n",
+      "onion\n",
+      "orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "#continue\n",
+    "fruits=[\"appple\", \"banana\", \"kiwi\", \"eggplant\", \"onion\", \"orange\"]\n",
+    "for fruit in fruits:\n",
+    "    if fruit==\"eggplant\":\n",
+    "        continue\n",
+    "    print(fruit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "vinyk shrm"
+     ]
+    }
+   ],
+   "source": [
+    "name= \"vinayak sharma\"\n",
+    "for n in name:\n",
+    "    if n==\"a\":\n",
+    "        continue\n",
+    "    print(n, end=\"\")\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0, appple\n",
+      "1, banana\n",
+      "2, kiwi\n",
+      "3, eggplant\n",
+      "4, onion\n",
+      "5, orange\n"
+     ]
+    }
+   ],
+   "source": [
+    "#enumerate\n",
+    "for i,f in enumerate(fruits):\n",
+    "    print(f\"{i}, {f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0:pen\n",
+      "1:book\n",
+      "2:pencil\n",
+      "3:eraser\n",
+      "5:bag\n"
+     ]
+    }
+   ],
+   "source": [
+    "items= ['pen', 'book','pencil', 'eraser', 'scale','bag']\n",
+    "for i, v in enumerate(items):\n",
+    "     if i == 4:\n",
+    "           continue\n",
+    "     print(f'{i}:{v}')"
    ]
   },
   {
