--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -4,183 +4,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- create\n",
-    "- methods and operations\n",
-    "   - union\n",
-    "   - intersection\n",
-    "   - symmetric difference\n",
-    "   - issubset\n",
-    "   - issuperset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{1, 2, 3, 4, 5, 6}\n"
-     ]
-    }
-   ],
-   "source": [
-    "#It does not print sama value, only print unique values\n",
-    "a= {1,2,3,4,5,6}\n",
-    "b= {1,1,2,2,3,4,5,6,3,5,6,4}\n",
-    "print(a)\n",
-    "print(b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'l', 'e', 'o', 'h'}\n"
-     ]
-    }
-   ],
-   "source": [
-    "c= set(\"hello\")\n",
-    "print(c)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2, 3, 4, 5, 6}\n"
-     ]
-    }
-   ],
-   "source": [
-    "d= set([1,2,3,4,5,6,2,3,4,1,5,6])\n",
-    "print(d)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10}\n"
-     ]
-    }
-   ],
-   "source": [
-    "e= set(range(11))\n",
-    "print(e)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n"
-     ]
-    }
-   ],
-   "source": [
-    "data= set()\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{1, 2}\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.add(1)\n",
+    "Types of Functions\n",
     "\n",
-    "data.add(2)\n",
-    "print(data)"
+    "    User definded functions\n",
+    "\n",
+    "\n",
+    "    .Built in functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#syntax of function\n",
+    "#def function_name():\n",
+    "#    statements\n",
+    "\n",
+    "#functions call\n",
+    "#function_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2}\n"
+      "My first user defined function\n"
      ]
     }
    ],
    "source": [
-    "#pop apne aap ek value hta dega jitni baar run kraenge\n",
-    "data.pop()\n",
-    "print(data)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{2}\n"
-     ]
-    }
-   ],
-   "source": [
-    "#discard mein hum choose kar skte hain ki kis value ko htana hai \n",
-    "data.discard(1)\n",
-    "print(data)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "set()\n"
-     ]
-    }
-   ],
-   "source": [
-    "data.clear()\n",
-    "print(data)"
+    "def my_fun():\n",
+    "    print(\"My first user defined function\")\n",
+    "my_fun()"
    ]
   },
   {
@@ -192,129 +54,232 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 6}\n",
-      "{4, 5, 6, 7, 8, 9}\n",
-      "{8, 9, 10, 7}\n"
+      "My first user defined function\n"
      ]
     }
    ],
    "source": [
-    "x= {1,2,3,4,5,6}\n",
-    "y= {4,5,6,7,8,9}\n",
-    "z= {7,8,9,10}\n",
-    "print(x)\n",
-    "print(y)\n",
-    "print(z)"
+    "my_fun()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n",
-      "{1, 2, 3, 4, 5, 6, 7, 8, 9}\n"
+      "40.0\n"
      ]
     }
    ],
    "source": [
-    "print(x.union(y))\n",
-    "print(x|y)\n"
+    "def avg(a,b,c):\n",
+    "    print(a+b+c/3)\n",
+    "avg(10,20,30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sum(a,b):\n",
+    "    print(a+b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{4, 5, 6}\n",
-      "{4, 5, 6}\n"
+      "30\n"
      ]
     }
    ],
    "source": [
-    "print(x.intersection(y))\n",
-    "print(x&y)"
+    "sum(10,20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3}\n",
-      "{8, 9, 7}\n"
+      "78.5\n"
      ]
     }
    ],
    "source": [
-    "print(x.difference(y))\n",
-    "print(y-x)"
+    "def area_of_circle(r):\n",
+    "    print(3.14*r*r)\n",
+    "\n",
+    "area_of_circle(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 7, 8, 9}\n",
-      "{1, 2, 3, 7, 8, 9}\n"
+      "40.0\n"
      ]
     }
    ],
    "source": [
-    "print(x.symmetric_difference(y))\n",
-    "print(x^y)"
+    "def avg(a,b,c):\n",
+    "    print(a+b+c/3)\n",
+    "avg(10,20,30)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "40.0\n"
      ]
     }
    ],
    "source": [
-    "print(x.issuperset(y))"
+    "def avg(a,b,c):\n",
+    "    return(a+b+c/3)\n",
+    "average = avg(10,20,30)\n",
+    "print(average)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "vinayak ji\n"
      ]
     }
    ],
    "source": [
-    "print(x.issubset(z))"
+    "def my_name(name):\n",
+    "    return(name + ' ji')\n",
+    "n = my_name(\"vinayak\")\n",
+    "print(n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vinayak ji\n"
+     ]
+    }
+   ],
+   "source": [
+    "def my_name(name):\n",
+    "    print(name + ' ji')\n",
+    "my_name(\"Vinayak\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i am from India\n"
+     ]
+    }
+   ],
+   "source": [
+    "#default parameter functions\n",
+    "def my_country(country = \" India\"):\n",
+    "    print('i am from'+ country)\n",
+    "my_country()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mango\n",
+      "apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "#List\n",
+    "\n",
+    "def food_option(food):\n",
+    "    for a in food:\n",
+    "        print(a)\n",
+    "fruits=['mango', 'apple']\n",
+    "food_option(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odd\n"
+     ]
+    }
+   ],
+   "source": [
+    "def even_odd(num):\n",
+    "    if num%2==0:\n",
+    "        print('even')\n",
+    "    else:\n",
+    "        print('odd')\n",
+    "num= int(input(\"enter your number\"))\n",
+    "even_odd(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n"
    ]
   },
   {
