--- a/Analysis/Numpy.ipynb
+++ b/Analysis/Numpy.ipynb
@@ -2,10 +2,530 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np\n",
+    "print(np.__version__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "\n",
+    "print(arr)\n",
+    "\n",
+    "print(type(arr))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#0 d array\n",
+    "arr = np.array(42)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#1 d array\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2d array\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3d array\n",
+    "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#check number of dimension\n",
+    "a = np.array(42)\n",
+    "b = np.array([1, 2, 3, 4, 5])\n",
+    "c = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "d = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
+    "\n",
+    "print(a.ndim)\n",
+    "print(b.ndim)\n",
+    "print(c.ndim)\n",
+    "print(d.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4], ndmin=5)\n",
+    "print(arr)\n",
+    "print('number of dimensions :', arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#slicing\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "print(arr[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#slicing\n",
+    "arr = np.array([1, 2, 3, 4])\n",
+    "print(arr[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4])\n",
+    "print(arr[2] + arr[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2d array slicing\n",
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
+    "print('2nd element on 1st row: ', arr[0, 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#3d slicing \n",
+    "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[7, 8, 9], [10, 11, 12]]])\n",
+    "print(arr[0, 1, 2])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#negative indexing \n",
+    "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
+    "print('Last element from 2nd dim: ', arr[1, -1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#slicing\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(arr[1:5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(arr[4:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(arr[:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#negative slicing\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(arr[-3:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(arr[1:5:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
+    "print(arr[::2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#slicing 2 arrays\n",
+    "arr = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])\n",
+    "print(arr[1, 1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])\n",
+    "print(arr[0:2, 2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])\n",
+    "print(arr[0:2, 1:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([10, 15, 20, 25, 30, 35, 40])\n",
+    "\n",
+    "print(arr[1:4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- i - integer\n",
+    "- b - boolean\n",
+    "- u - unsigned integer\n",
+    "- f - float\n",
+    "- c - complex float\n",
+    "- m - timedelta\n",
+    "- M - datetime\n",
+    "- O - object\n",
+    "- S - string\n",
+    "- U - unicode string\n",
+    "- V - fixed chunk of memory for other type ( void )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4])\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array(['apple', 'banana', 'cherry'])\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4], dtype='S')\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4], dtype='i4')\n",
+    "print(arr)\n",
+    "print(arr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#converting data type into existing array\n",
+    "arr = np.array([1.1, 2.1, 3.1])\n",
+    "newarr = arr.astype('i')\n",
+    "print(newarr)\n",
+    "print(newarr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1.1, 2.1, 3.1])\n",
+    "newarr = arr.astype(int)\n",
+    "print(newarr)\n",
+    "print(newarr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 0, 3])\n",
+    "newarr = arr.astype(bool)\n",
+    "print(newarr)\n",
+    "print(newarr.dtype)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#copy\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "x = arr.copy()\n",
+    "arr[0] = 42 #index number\n",
+    "print(arr)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#view\n",
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "x = arr.view()\n",
+    "arr[0] = 42\n",
+    "print(arr)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "x = arr.view()\n",
+    "x[0] = 31\n",
+    "print(arr)\n",
+    "print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5])\n",
+    "\n",
+    "x = arr.copy()\n",
+    "y = arr.view()\n",
+    "\n",
+    "print(x.base)\n",
+    "print(y.base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_array = np.array([1, 2, 3])\n",
+    "x = original_array.copy()\n",
+    "x[0] = 5\n",
+    "print(original_array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#shaping array\n",
+    "arr = np.array([[1, 2, 3, 4], [5, 6, 7, 8]])\n",
+    "print(arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4], ndmin=5)\n",
+    "print(arr)\n",
+    "print('shape of array :', arr.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#array reshaping\n",
+    "#1D to 2-D\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])\n",
+    "newarr = arr.reshape(4, 3)\n",
+    "print(newarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#2D to 3D\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])\n",
+    "newarr = arr.reshape(2, 3, 2)\n",
+    "print(newarr)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8])\n",
+    "print(arr.reshape(2, 4).base)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Convert 1D array with 8 elements to 3D array with 2x2 elements:\n",
+    "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8])\n",
+    "newarr = arr.reshape(2, 2, -1)\n",
+    "print(newarr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Flattening array means converting a multidimensional array into a 1D array.\n",
+    "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "newarr = arr.reshape(-1)\n",
+    "print(newarr)"
+   ]
   },
   {
    "cell_type": "code",
@@ -17,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -31,7 +551,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
