--- a/Analysis/Numpy.ipynb
+++ b/Analysis/Numpy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.1.1\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "print(np.__version__)"
@@ -21,9 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5])\n",
     "\n",
@@ -34,9 +51,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "42\n"
+     ]
+    }
+   ],
    "source": [
     "#0 d array\n",
     "arr = np.array(42)\n",
@@ -45,9 +70,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "#1 d array\n",
     "arr = np.array([1, 2, 3, 4, 5])\n",
@@ -56,9 +89,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n"
+     ]
+    }
+   ],
    "source": [
     "#2d array\n",
     "arr = np.array([[1, 2, 3], [4, 5, 6]])\n",
@@ -67,9 +109,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2 3]\n",
+      "  [4 5 6]]\n",
+      "\n",
+      " [[1 2 3]\n",
+      "  [4 5 6]]]\n"
+     ]
+    }
+   ],
    "source": [
     "#3d array\n",
     "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[1, 2, 3], [4, 5, 6]]])\n",
@@ -78,9 +132,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "#check number of dimension\n",
     "a = np.array(42)\n",
@@ -96,9 +161,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[[1 2 3 4]]]]]\n",
+      "number of dimensions : 5\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4], ndmin=5)\n",
     "print(arr)\n",
@@ -107,9 +181,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "#slicing\n",
     "arr = np.array([1, 2, 3, 4])\n",
@@ -118,9 +200,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
     "#slicing\n",
     "arr = np.array([1, 2, 3, 4])\n",
@@ -129,9 +219,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4])\n",
     "print(arr[2] + arr[3])"
@@ -139,9 +237,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2nd element on 1st row:  2\n"
+     ]
+    }
+   ],
    "source": [
     "#2d array slicing\n",
     "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
@@ -150,9 +256,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
    "source": [
     "#3d slicing \n",
     "arr = np.array([[[1, 2, 3], [4, 5, 6]], [[7, 8, 9], [10, 11, 12]]])\n",
@@ -161,9 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last element from 2nd dim:  10\n"
+     ]
+    }
+   ],
    "source": [
     "#negative indexing \n",
     "arr = np.array([[1,2,3,4,5], [6,7,8,9,10]])\n",
@@ -172,9 +294,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "#slicing\n",
     "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
@@ -183,9 +313,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6 7]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
     "print(arr[4:])"
@@ -193,9 +331,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
     "print(arr[:4])"
@@ -203,9 +349,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5 6]\n"
+     ]
+    }
+   ],
    "source": [
     "#negative slicing\n",
     "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
@@ -214,9 +368,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 4]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
     "print(arr[1:5:2])"
@@ -224,9 +386,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 3 5 7]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5, 6, 7])\n",
     "print(arr[::2])"
@@ -234,9 +404,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[7 8 9]\n"
+     ]
+    }
+   ],
    "source": [
     "#slicing 2 arrays\n",
     "arr = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])\n",
@@ -245,9 +423,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3 8]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])\n",
     "print(arr[0:2, 2])"
@@ -255,9 +441,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 4]\n",
+      " [7 8 9]]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([[1, 2, 3, 4, 5], [6, 7, 8, 9, 10]])\n",
     "print(arr[0:2, 1:4])"
@@ -265,9 +460,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[15 20 25]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([10, 15, 20, 25, 30, 35, 40])\n",
     "\n",
@@ -293,9 +496,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "int64\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4])\n",
     "print(arr.dtype)"
@@ -303,9 +514,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<U6\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array(['apple', 'banana', 'cherry'])\n",
     "print(arr.dtype)"
@@ -313,20 +532,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[b'1' b'2' b'3' b'4']\n",
+      "|S1\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4], dtype='S')\n",
     "print(arr)\n",
-    "print(arr.dtype)"
+    "print(arr.dtype)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4]\n",
+      "int32\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4], dtype='i4')\n",
     "print(arr)\n",
@@ -335,22 +572,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1.1 2.1 3.1]\n",
+      "float32\n"
+     ]
+    }
+   ],
    "source": [
     "#converting data type into existing array\n",
     "arr = np.array([1.1, 2.1, 3.1])\n",
-    "newarr = arr.astype('i')\n",
+    "newarr = arr.astype('f')\n",
     "print(newarr)\n",
     "print(newarr.dtype)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n",
+      "int64\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1.1, 2.1, 3.1])\n",
     "newarr = arr.astype(int)\n",
@@ -360,9 +615,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True False  True]\n",
+      "bool\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 0, 3])\n",
     "newarr = arr.astype(bool)\n",
@@ -372,9 +636,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42  2  3  4  5]\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "#copy\n",
     "arr = np.array([1, 2, 3, 4, 5])\n",
@@ -386,9 +659,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[42  2  3  4  5]\n",
+      "[42  2  3  4  5]\n"
+     ]
+    }
+   ],
    "source": [
     "#view\n",
     "arr = np.array([1, 2, 3, 4, 5])\n",
@@ -400,9 +682,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[31  2  3  4  5]\n",
+      "[31  2  3  4  5]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5])\n",
     "x = arr.view()\n",
@@ -413,9 +704,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n",
+      "[1 2 3 4 5]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5])\n",
     "\n",
@@ -428,9 +728,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
    "source": [
     "original_array = np.array([1, 2, 3])\n",
     "x = original_array.copy()\n",
@@ -440,9 +748,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "#shaping array\n",
     "arr = np.array([[1, 2, 3, 4], [5, 6, 7, 8]])\n",
@@ -451,9 +767,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[[[1 2 3 4]]]]]\n",
+      "shape of array : (1, 1, 1, 1, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4], ndmin=5)\n",
     "print(arr)\n",
@@ -462,9 +787,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n"
+     ]
+    }
+   ],
    "source": [
     "#array reshaping\n",
     "#1D to 2-D\n",
@@ -475,9 +811,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[ 1  2]\n",
+      "  [ 3  4]\n",
+      "  [ 5  6]]\n",
+      "\n",
+      " [[ 7  8]\n",
+      "  [ 9 10]\n",
+      "  [11 12]]]\n"
+     ]
+    }
+   ],
    "source": [
     "#2D to 3D\n",
     "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12])\n",
@@ -487,9 +837,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3 4 5 6 7 8]\n"
+     ]
+    }
+   ],
    "source": [
     "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8])\n",
     "print(arr.reshape(2, 4).base)"
@@ -497,9 +855,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[1 2]\n",
+      "  [3 4]]\n",
+      "\n",
+      " [[5 6]\n",
+      "  [7 8]]]\n"
+     ]
+    }
+   ],
    "source": [
     "#Convert 1D array with 8 elements to 3D array with 2x2 elements:\n",
     "arr = np.array([1, 2, 3, 4, 5, 6, 7, 8])\n",
@@ -509,7 +879,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
