--- a/Functions.ipynb
+++ b/Functions.ipynb
@@ -275,11 +275,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "\n",
+    "def fizzbuzz(n):\n",
+    "\n",
+    " for i in range(1, n + 1):\n",
+    "    if i % 15 == 0:\n",
+    "      print(\"FizzBuzz\")\n",
+    "    elif i % 3 == 0:\n",
+    "      print(\"Fizz\")\n",
+    "    elif i % 5 == 0:\n",
+    "      print(\"Buzz\")\n",
+    "    else:\n",
+    "      print(i)"
    ]
   },
   {
@@ -292,7 +303,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
